feat: criei versão simplifcada do backend utilizando JWT nos headers.
