# src/routes/movie.routes.js
@@ -1,18 +1,16 @@
 import express from "express";
 import * as movieController from "../controllers/movie.controller.js"; // importa todos os métodos do controller
-import { jwtAuthMiddlewareCookie } from "../middlewares/auth.js";
+import {
+  jwtAuthMiddlewareCookie,
+  authenticateUser,
+} from "../middlewares/auth.js";
 
 const router = express.Router();
 
-
-router.get(
-  "/page/:page",
-
-  movieController.getMoviesApi
-);
+router.get("/page/:page", authenticateUser, movieController.getMoviesApi);
 router.get(
   "/search/page/:searchPage",
-
+  authenticateUser,
   movieController.getMoviesBySearch
 );
 
