# src/swagger.json
@@ -152,13 +152,24 @@
           "400": {
             "description": "ID do usuário não foi informado"
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "404": {
             "description": "Usuário não encontrado"
           },
           "500": {
             "description": "Erro ao buscar usuário"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/user/update-password/{userId}": {
@@ -206,7 +217,10 @@
             "description": "Preencha todos os campos obrigatórios."
           },
           "401": {
-            "description": "Senha atual inválida."
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
           },
           "404": {
             "description": "Usuário não encontrado."
@@ -214,7 +228,12 @@
           "500": {
             "description": "Erro ao atualizar a senha."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/user/update-email/{userId}": {
@@ -261,6 +280,12 @@
           "400": {
             "description": "Preencha todos os campos obrigatórios ou o novo email deve ser diferente do email cadastrado."
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "404": {
             "description": "Usuário não encontrado."
           },
@@ -270,7 +295,12 @@
           "500": {
             "description": "Erro ao atualizar o email."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/review/create": {
@@ -327,21 +357,30 @@
           "201": {
             "description": "Review criado com sucesso"
           },
-          "200": {
-            "description": "Review atualizado com sucesso"
-          },
           "400": {
             "description": "Preencha todos os campos obrigatórios."
+          },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
           },
           "404": {
             "description": "Usuário não encontrado."
           },
           "500": {
-            "description": "Erro ao criar ou atualizar review."
+            "description": "Erro ao criar review."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
+
     "/review/update-review/{userId}/{reviewId}": {
       "put": {
         "summary": "Atualizar Review",
@@ -395,20 +434,40 @@
           "400": {
             "description": "Preencha todos os campos obrigatórios."
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "404": {
             "description": "Usuário ou review não encontrado."
           },
           "500": {
             "description": "Erro ao atualizar review."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
-    "/review/delete/{reviewId}": {
+    "/review/delete/{userId}/{reviewId}": {
       "delete": {
         "summary": "Deletar Review",
         "tags": ["Review"],
         "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID do usuário"
+          },
           {
             "name": "reviewId",
             "in": "path",
@@ -423,13 +482,24 @@
           "200": {
             "description": "Review deletado com sucesso"
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "404": {
             "description": "Review não encontrado ou usuário não encontrado."
           },
           "500": {
             "description": "Erro ao deletar review."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/user/add/favorites": {
@@ -478,13 +548,24 @@
           "200": {
             "description": "Filme adicionado aos favoritos com sucesso"
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "404": {
             "description": "Filme não encontrado ou usuário não encontrado."
           },
           "500": {
             "description": "Erro ao adicionar filme aos favoritos."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/user/remove/favorites": {
@@ -517,13 +598,24 @@
           "200": {
             "description": "Filme removido dos favoritos com sucesso"
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "404": {
             "description": "Filme não encontrado ou usuário não encontrado."
           },
           "500": {
             "description": "Erro ao remover filme dos favoritos."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/movies/page/{page}": {
@@ -545,10 +637,21 @@
           "200": {
             "description": "Filmes encontrados"
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "500": {
             "description": "Erro ao buscar filmes da API externa."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/movies/search/page/{searchPage}": {
@@ -579,10 +682,30 @@
           "200": {
             "description": "Filmes encontrados"
           },
+          "401": {
+            "description": "Token é obrigatório para acessar esse recurso"
+          },
+          "403": {
+            "description": "Token inválido"
+          },
           "500": {
             "description": "Erro ao buscar filmes da API externa."
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
